--- a/index.html
+++ b/index.html
@@ -169,6 +169,205 @@
     <li>Salt Water</li>
   </ul>
 
-  <a href="index.html" class="back-link">← Back to Home</a>
+<a href="https://time-traveller-2014.github.io/kinjal-s-words/" class="back-link">← Back to Home</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kinjal Patel | Official Website</title>
+
+  <!-- Google Font Fallback -->
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&display=swap" rel="stylesheet">
+
+  <style>
+    @font-face {
+      font-family: 'Centaur';
+      src: url('fonts/centaur.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Centaur', 'Cormorant Garamond', Georgia, serif;
+      font-size: 19px;
+      line-height: 1.85;
+      background: #fdfcf9;
+      color: #222;
+      text-align: center;
+    }
+
+    .profile-header {
+      padding: 4rem 1rem 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .profile-header img {
+      width: 180px;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    .profile-header h1 {
+      font-size: 2.4em;
+      margin: 0.2em 0;
+    }
+
+    .profile-header p {
+      font-style: italic;
+      font-size: 1.1em;
+      margin-top: 0.3em;
+      color: #555;
+    }
+
+    .poetic-line {
+      font-style: italic;
+      font-size: 1.3em;
+      color: #555;
+      max-width: 640px;
+      margin: 2.5rem auto;
+      padding: 0 1rem;
+    }
+
+    section {
+      padding: 4rem 1rem 2rem;
+      max-width: 720px;
+      margin: 0 auto;
+    }
+
+    section p,
+    section li {
+      font-size: 1.15em;
+      line-height: 1.9;
+    }
+
+    h2 {
+      font-size: 2em;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 0.3em;
+      margin-bottom: 1.5rem;
+    }
+
+    ul {
+      list-style-type: disc;
+      text-align: left;
+      padding-left: 20px;
+      margin-top: 1em;
+    }
+
+    li {
+      margin-bottom: 2.5em;
+    }
+
+    .read-button {
+      background-color: #1f1f1f;
+      color: white;
+      padding: 12px 26px;
+      border-radius: 30px;
+      font-size: 1.1em;
+      font-family: 'Cormorant Garamond', Georgia, serif;
+      margin-top: 10px;
+      text-decoration: none;
+      display: inline-block;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: background-color 0.3s ease;
+    }
+
+    .read-button:hover {
+      background-color: #333;
+    }
+
+    .shop-button {
+      background-color: #1f1f1f;
+      color: white;
+      padding: 14px 28px;
+      border-radius: 30px;
+      font-size: 1.15em;
+      font-family: 'Cormorant Garamond', Georgia, serif;
+      margin-top: 30px;
+      text-decoration: none;
+      display: inline-block;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: all 0.3s ease;
+    }
+
+    .shop-button:hover {
+      background-color: #333;
+    }
+
+    @media screen and (max-width: 600px) {
+      body {
+        font-size: 17px;
+      }
+      .poetic-line {
+        font-size: 1.2em;
+      }
+      .profile-header h1 {
+        font-size: 2em;
+      }
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="profile-header">
+    <img src="images/me.jpg" alt="Kinjal Patel" />
+    <h1>KINJAL PATEL</h1>
+    <p>Researcher. Writer. Quietly documenting what lives between particles and people.</p>
+  </div>
+
+  <div class="poetic-line">
+    “I study what doesn’t exist. And I write what can't be said.” — Kinjal
+  </div>
+
+  <section id="research">
+    <h2>Research Articles</h2>
+    <p>Peer-reviewed papers exploring structure, transitions, and decay properties of heavy baryons:</p>
+    <ul>
+      <li>
+        <strong>Transition Properties of Doubly Heavy Baryons</strong><br>
+        <em>Published in International Journal of Theoretical Physics (IJTP, 2025)</em><br>
+        <a class="read-button" href="https://doi.org/10.1007/s10773-025-05997-5" target="_blank">Read Full Article</a>
+      </li>
+      <li>
+        <strong>Electromagnetic and Weak Decay Properties of Singly Heavy Baryons</strong><br>
+        <em>Published in European Physical Journal Plus (EPJP, 2025)</em><br>
+        <a class="read-button" href="https://doi.org/10.1140/epjp/s13360-025-06398-7" target="_blank">Read Full Article</a>
+      </li>
+    </ul>
+  </section>
+
+  <section id="drop-thought">
+    <h2>Drop a Thought</h2>
+    <p style="max-width: 600px; margin: 0 auto; font-style: italic;">
+      A question, a quiet ache, or a thought you need to let go of — I’ll hold it with care.
+    </p>
+
+    <button onclick="document.getElementById('thought-form').style.display='block'" style="margin: 1.5rem auto; padding: 12px 24px; border-radius: 30px; font-size: 1.1em; font-family: Georgia, serif; background-color: #1f1f1f; color: white; border: none; cursor: pointer;">
+      💬 Drop a Thought
+    </button>
+
+    <form id="thought-form" action="https://formsubmit.co/your@email.com" method="POST" style="display:none; max-width: 500px; margin: 2rem auto;">
+      <input type="text" name="name" placeholder="Your name (optional)" style="width: 100%; padding: 10px; margin-bottom: 10px; font-family: Georgia, serif;" />
+      <textarea name="message" rows="5" placeholder="What would you like to share?" required style="width: 100%; padding: 10px; font-family: Georgia, serif;"></textarea>
+      <button type="submit" class="shop-button" style="margin-top: 15px;">Send</button>
+      <input type="hidden" name="_captcha" value="false">
+    </form>
+  </section>
+
+  <a class="shop-button" href="https://amzn.in/d/38fGir8" target="_blank">🛍️ Buy My Book on Amazon</a>
+
+</body>
+</html>
+
+
+
 </body>
 </html>
