--- a/index.html
+++ b/index.html
@@ -367,6 +367,26 @@
 </body>
 </html>
 
+<!-- Buy Me a Coffee Section -->
+<section style="text-align: center; padding: 2rem;">
+  <h2>Support My Work ☕</h2>
+  <p>If you like what I do, you can buy me a coffee!</p>
+
+  <!-- Clickable UPI Link -->
+  <a href="upi://pay?pa=travellertime932@okicici&pn=Kinjal%20Patel&am=50&cu=INR&tn=Thanks%20for%20the%20coffee!" 
+     target="_blank" 
+     style="display: inline-block; text-decoration: none;">
+    <img src="https://www.buymeacoffee.com/assets/img/guidelines/logo-mark-1.svg" 
+         alt="Buy Me a Coffee" 
+         style="height: 60px; margin: 1rem auto;">
+  </a>
+
+  <!-- QR Code Section -->
+  <div style="margin-top: 1rem;">
+    <p>Or scan this QR code:</p>
+    <img src="qr.png" alt="Google Pay QR Code" style="width: 200px; border-radius: 12px;">
+  </div>
+</section>
 
 
 </body>
