--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
   <!-- QR Code Section -->
   <div style="margin-top: 1rem;">
     <p>Or scan this QR code:</p>
-    <img src="qr.png" alt="Google Pay QR Code" style="width: 200px; border-radius: 12px;">
+    <img src="qr.jpg" alt="Google Pay QR Code" style="width: 200px; border-radius: 12px;">
   </div>
 </section>
 
