--- a/index.html
+++ b/index.html
@@ -289,6 +289,9 @@
          alt="Buy Me a Coffee" 
          style="height: 60px; margin: 1rem auto;">
   </a>
+<p style="font-size: 0.95em; color: #666; margin-top: 1rem;">
+  <em>(The UPI button works only on mobile apps. If you're on desktop, use the QR code below.)</em>
+</p>
 
   <!-- QR Code Section -->
   <div style="margin-top: 1rem;">
