--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 <body>
 
   <div class="profile-header">
-    <img src="images/me.jpg" alt="Kinjal Patel" />
+    <img src="images/profile.jpg" alt="Kinjal Patel" />
     <h1>KINJAL PATEL</h1>
     <p>Researcher. Writer. Quietly documenting what lives between particles and people.</p>
   </div>
