--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
   <a href="upi://pay?pa=travellertime932@okicici&pn=Kinjal%20Patel&am=150&cu=INR&tn=Thanks%20for%20the%20coffee!" 
      target="_blank" 
      style="display: inline-block; text-decoration: none;">
-    <img src="https://www.buymeacoffee.com/assets/img/guidelines/logo-mark-1.svg" 
+    <img src="https://png.pngtree.com/png-vector/20230707/ourlarge/pngtree-iced-coffee-clip-art-png-image_7505161.png" 
          alt="Buy Me a Coffee" 
          style="height: 60px; margin: 1rem auto;">
   </a>
