--- a/index.html
+++ b/index.html
@@ -228,11 +228,13 @@
     <img src="images/profile.jpg" alt="Kinjal Patel" />
     <h1>KINJAL PATEL</h1>
     <p>Researcher. Writer. Quietly documenting what lives between particles and people.</p>
+    <div class="intro" style="max-width: 640px; margin: 2rem auto; font-size: 1.1em; color: #444; font-style: italic; padding: 0 1rem;">
+  I am Kinjal — a physicist by education, a poet by inclination. I spend my days studying what can’t be seen and my nights writing what can’t be said. Somewhere between quantum equations and unsent letters, I try to make sense of both particles and people.
+</div>
+
   </div>
 
-  <div class="poetic-line">
-    “I study what doesn’t exist. And I write what can't be said.” — Kinjal
-  </div>
+ 
 
   <section id="research">
     <h2>Research Articles</h2>
