--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <h1>KINJAL PATEL</h1>
     <p>Researcher. Writer. Quietly documenting what lives between particles and people.</p>
     <div class="intro" style="max-width: 640px; margin: 2rem auto; font-size: 1.1em; color: #444; font-style: italic; padding: 0 1rem;">
-  I am Kinjal — a physicist by education, a poet by inclination. I spend my days studying what can’t be seen and my nights writing what can’t be said. Somewhere between quantum equations and unsent letters, I try to make sense of both particles and people.
+  I am Kinjal — a physicist by education, a poet by inclination. Currently, I'm pursuing my PhD in high energy particle physics. I spend my days studying what can’t be seen and my nights writing what can’t be said. Somewhere between quantum equations and unsent letters, I try to make sense of both particles and people.
 </div>
 
   </div>
