--- a/index.html
+++ b/index.html
@@ -237,8 +237,7 @@
  
 
   <section id="research">
-    <h2>Research Articles</h2>
-    <p>Peer-reviewed papers exploring structure, transitions, and decay properties of heavy baryons:</p>
+    <h2>You can read my Research Articles bellow </h2>
     <ul>
       <li>
         <strong>Transition Properties of Doubly Heavy Baryons</strong><br>
