--- a/index.html
+++ b/index.html
@@ -3,88 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kinjal's Reading List</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&display=swap" rel="stylesheet">
-  <style>
-    @font-face {
-      font-family: 'Centaur';
-      src: url('fonts/centaur.woff') format('woff');
-      font-weight: normal;
-      font-style: normal;
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Centaur', 'Cormorant Garamond', Georgia, serif;
-      background: #fdfcf9;
-      color: #222;
-      padding: 3rem 1rem;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 2.4em;
-      margin-bottom: 1rem;
-    }
-
-    p {
-      font-style: italic;
-      color: #666;
-      margin-bottom: 3rem;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 1.4rem;
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 0;
-      list-style: none;
-      counter-reset: book;
-    }
-
-    .grid li {
-      text-align: left;
-      font-size: 1.1em;
-      line-height: 1.6;
-      counter-increment: book;
-    }
-
-    .grid li::before {
-      content: counter(book) ". ";
-      font-weight: bold;
-      color: #444;
-    }
-
-    a.back-link {
-      display: inline-block;
-      margin-top: 3rem;
-      text-decoration: none;
-      font-size: 1em;
-      color: #333;
-      border: 1px solid #aaa;
-      padding: 10px 20px;
-      border-radius: 30px;
-      transition: all 0.3s ease;
-    }
-
-    a.back-link:hover {
-      background-color: #222;
-      color: white;
-      border-color: #222;
-    }
-  </style>
-</head>
-<body>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kinjal Patel | Official Website</title>
-
-  <!-- Google Font Fallback -->
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&display=swap" rel="stylesheet">
 
   <style>
@@ -208,6 +127,26 @@
       background-color: #333;
     }
 
+    .twenties-button {
+      background: linear-gradient(135deg, #7f5539, #b08968);
+      color: #fff;
+      padding: 14px 32px;
+      font-size: 1.15em;
+      font-family: 'Cormorant Garamond', Georgia, serif;
+      border: none;
+      border-radius: 40px;
+      text-decoration: none;
+      display: inline-block;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+      margin: 40px auto 10px;
+      transition: all 0.3s ease;
+    }
+
+    .twenties-button:hover {
+      background: linear-gradient(135deg, #5a3928, #8d674c);
+      transform: scale(1.03);
+    }
+
     @media screen and (max-width: 600px) {
       body {
         font-size: 17px;
@@ -228,17 +167,17 @@
     <img src="images/profile.jpg" alt="Kinjal Patel" />
     <h1>KINJAL PATEL</h1>
     <p>Researcher. Writer. Quietly documenting what lives between particles and people.</p>
-    <div class="intro" style="max-width: 640px; margin: 2rem auto; font-size: 1.1em; color: #444; font-style: italic; padding: 0 1rem;">
-  I am Kinjal — a physicist by education, a poet by inclination. Currently, I'm pursuing my PhD in high energy particle physics. I spend my days studying what can’t be seen and my nights writing what can’t be said. Somewhere between quantum equations and unsent letters, I try to make sense of both particles and people.
-</div>
 
+    <div class="intro" style="max-width: 640px; margin: 2rem auto; font-size: 1.1em; color: #444; font-style: italic; padding: 0 1rem;">
+      I am Kinjal — a physicist by education, a poet by inclination. Currently, I'm pursuing my PhD in high energy particle physics. I spend my days studying what can’t be seen and my nights writing what can’t be said. Somewhere between quantum equations and unsent letters, I try to make sense of both particles and people.
+    </div>
   </div>
 
- <a href="twenties.html" class="read-button">📖 Read This If You Are in Your 20s</a>
-
+  <!-- Aesthetic Twenties Button -->
+  <a href="twenties.html" class="twenties-button">📖 Read This If You Are in Your 20s</a>
 
   <section id="research">
-    <h2>You can read my Research Articles bellow </h2>
+    <h2>You can read my Research Articles below</h2>
     <ul>
       <li>
         <strong>Transition Properties of Doubly Heavy Baryons</strong><br>
@@ -270,38 +209,32 @@
       <input type="hidden" name="_captcha" value="false">
     </form>
   </section>
-<a class="shop-button" href="booklist.html">📚 Reading List</a>
-<a class="shop-button" href="https://amzn.in/d/38fGir8" target="_blank">🛍️ Buy My Book on Amazon</a>
 
+  <a class="shop-button" href="booklist.html">📚 Reading List</a>
+  <a class="shop-button" href="https://amzn.in/d/38fGir8" target="_blank">🛍️ Buy My Book on Amazon</a>
 
+  <!-- Buy Me a Coffee Section -->
+  <section style="text-align: center; padding: 2rem;">
+    <h2>Support My Work ☕</h2>
+    <p>If you like what I do, you can buy me a coffee!</p>
 
-</body>
-</html>
+    <a href="upi://pay?pa=travellertime932@okicici&pn=Kinjal%20Patel&am=150&cu=INR&tn=Thanks%20for%20the%20coffee!"
+       target="_blank"
+       style="display: inline-block; text-decoration: none;">
+      <img src="https://png.pngtree.com/png-vector/20230707/ourlarge/pngtree-iced-coffee-clip-art-png-image_7505161.png"
+           alt="Buy Me a Coffee"
+           style="height: 100px; margin: 1rem auto;">
+    </a>
 
-<!-- Buy Me a Coffee Section -->
-<section style="text-align: center; padding: 2rem;">
-  <h2>Support My Work ☕</h2>
-  <p>If you like what I do, you can buy me a coffee!</p>
+    <p style="font-size: 0.95em; color: #666; margin-top: 1rem;">
+      <em>(The UPI button works only on mobile apps. If you're on desktop, use the QR code below.)</em>
+    </p>
 
-  <!-- Clickable UPI Link -->
-  <a href="upi://pay?pa=travellertime932@okicici&pn=Kinjal%20Patel&am=150&cu=INR&tn=Thanks%20for%20the%20coffee!" 
-     target="_blank" 
-     style="display: inline-block; text-decoration: none;">
-    <img src="https://png.pngtree.com/png-vector/20230707/ourlarge/pngtree-iced-coffee-clip-art-png-image_7505161.png" 
-         alt="Buy Me a Coffee" 
-         style="height: 100px; margin: 1rem auto;">
-  </a>
-<p style="font-size: 0.95em; color: #666; margin-top: 1rem;">
-  <em>(The UPI button works only on mobile apps. If you're on desktop, use the QR code below.)</em>
-</p>
-
-  <!-- QR Code Section -->
-  <div style="margin-top: 1rem;">
-    <p>Or scan this QR code:</p>
-    <img src="qr.jpg" alt="Google Pay QR Code" style="width: 200px; border-radius: 12px;">
-  </div>
-</section>
-
+    <div style="margin-top: 1rem;">
+      <p>Or scan this QR code:</p>
+      <img src="qr.jpg" alt="Google Pay QR Code" style="width: 200px; border-radius: 12px;">
+    </div>
+  </section>
 
 </body>
 </html>
