--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
   <!-- Aesthetic Twenties Button -->
   <a href="twenties.html" class="twenties-button">📖 Read This If You Are in Your 20s</a>
    
-  <a href="happiness.html" class="happiness-button">📖 Read This If You have forgotton what happiness looks like </a>
+  <a href="happiness.html" class="happiness-button">📖 Read This If You have forgotton 
+    what happiness looks like </a>
 
   <section id="research">
     <h2>You can read my Research Articles below</h2>
