--- a/index.html
+++ b/index.html
@@ -176,8 +176,9 @@
   <!-- Aesthetic Twenties Button -->
   <a href="twenties.html" class="twenties-button">📖 Read This If You Are in Your 20s</a>
    
-  <a href="happiness.html" class="happiness-button">📖 Read This If You have forgotton 
-    what happiness looks like </a>
+<a href="happiness.html" class="twenties-button" style="white-space: normal; max-width: 300px;">
+  📖 Read This If You Have Forgotten<br>What Happiness Looks Like
+</a>
 
   <section id="research">
     <h2>You can read my Research Articles below</h2>
