--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   </div>
 
   <!-- Aesthetic Twenties Button -->
-  <a href="twenties.html" class="twenties-button">📖 Read This If You Are in Your 20s</a>
+  <a href="twenties.html" class="twenties-button">📖 Read This If You <br> Are in Your 20s</a>
    
 <a href="happiness.html" class="twenties-button" style="white-space: normal; max-width: 300px;">
   📖 Read This If You Have Forgotten <br> What Happiness Looks Like
