--- a/index.html
+++ b/index.html
@@ -176,9 +176,24 @@
   <!-- Aesthetic Twenties Button -->
   <a href="twenties.html" class="twenties-button">📖 Read This If You <br> Are in Your 20s</a>
    
-<a href="happiness.html" class="twenties-button" style="white-space: normal; max-width: 300px;">
-  📖 Read This If You Have Forgotten <br> What Happiness Looks Like
+<a href="happiness.html" class="twenties-button" style="
+  white-space: normal;
+  max-width: 380px;
+  display: inline-block;
+  padding: 14px 28px;
+  margin: 1.2rem auto;
+  font-size: 1.1em;
+  font-family: 'Cormorant Garamond', Georgia, serif;
+  background: linear-gradient(to right, #6f4e37, #3e2723);
+  color: #fff;
+  border-radius: 30px;
+  text-decoration: none;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.12);
+  transition: background 0.3s ease;
+">
+📖 Read This If You Have Forgotten What<br>Happiness Looks Like
 </a>
+
 
   <section id="research">
     <h2>You can read my Research Articles below</h2>
