--- a/happiness.html
+++ b/happiness.html
@@ -87,7 +87,8 @@ Your life lies in them.
 Your life will be the collection of each one—
 And nothing else.
   
-<a class="back-link" href="index.html">← Back to Home</a>
+<a class="back-link" href="index.html">
+  ← Back to Home</a>
   </div>
 </body>
 </html>
