--- a/happiness.html
+++ b/happiness.html
@@ -86,8 +86,8 @@ Enjoy those little moments.
 Your life lies in them.
 Your life will be the collection of each one—
 And nothing else.
-  
-<a class="back-link" href="index.html"></br>
+  </br>
+<a class="back-link" href="index.html">
   ← Back to Home</a>
   </div>
 </body>
