--- a/happiness.html
+++ b/happiness.html
@@ -26,11 +26,14 @@
       margin-bottom: 1.5rem;
     }
 
-    p {
-      font-size: 2.15em;
-      text-align: left;
-      margin-bottom: 2rem;
-    }
+   p {
+  font-size: 1.6em;
+  text-align: left;
+  margin-bottom: 2rem;
+  line-height: 1.85;
+  color: #444;
+}
+
 
     .back-link {
       display: inline-block;
