--- a/happiness.html
+++ b/happiness.html
@@ -6,14 +6,26 @@
   <title>Read This If You Are in Your 20s</title>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&display=swap" rel="stylesheet">
   <style>
-    body {
-      margin: 0;
-      background: #fdfaf7;
-      font-family: 'Cormorant Garamond', Georgia, serif;
-      color: #333;
-      padding: 3rem 1.5rem;
-      text-align: center;
-      line-height: 1.9;
+   body {
+  margin: 0;
+  background: #fdfaf7;
+  font-family: 'Cormorant Garamond', Georgia, serif;
+  color: #333;
+  padding: 3rem 1.5rem;
+  text-align: center;
+  font-size: 22px;
+  line-height: 1.85;
+}
+
+p {
+  font-size: 1.25em;
+  text-align: left;
+  margin-bottom: 2rem;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
     }
 
     .container {
@@ -26,13 +38,7 @@
       margin-bottom: 1.5rem;
     }
 
-   p {
-  font-size: 1.6em;
-  text-align: left;
-  margin-bottom: 2rem;
-  line-height: 1.85;
-  color: #444;
-}
+ 
 
 
     .back-link {
