--- a/happiness.html
+++ b/happiness.html
@@ -3,43 +3,45 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Read This If You Are in Your 20s</title>
+  <title>Read This If You've Forgotten What Happiness Feels Like</title>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&display=swap" rel="stylesheet">
   <style>
-   body {
-  margin: 0;
-  background: #fdfaf7;
-  font-family: 'Cormorant Garamond', Georgia, serif;
-  color: #333;
-  padding: 3rem 1.5rem;
-  text-align: center;
-  font-size: 22px;
-  line-height: 1.85;
-}
-
-p {
-  font-size: 1.25em;
-  text-align: left;
-  margin-bottom: 2rem;
-  max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
+    body {
+      margin: 0;
+      background: #fdfcf9;
+      font-family: 'Cormorant Garamond', Georgia, serif;
+      color: #222;
+      padding: 3rem 1.5rem;
+      text-align: center;
     }
 
     .container {
-      max-width: 800px;
+      max-width: 780px;
       margin: 0 auto;
+      padding: 2rem;
+      background-color: #fefdfb;
     }
 
     h1 {
-      font-size: 4.4em;
-      margin-bottom: 1.5rem;
+      font-size: 3em;
+      margin-bottom: 2rem;
+      font-weight: 500;
     }
 
- 
+    .quote-block {
+      font-size: 1.5em;
+      line-height: 2;
+      text-align: left;
+      color: #444;
+      background: #fffdf6;
+      padding: 2rem 2.2rem;
+      border-radius: 14px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.04);
+    }
 
+    .quote-block p {
+      margin-bottom: 2rem;
+    }
 
     .back-link {
       display: inline-block;
@@ -62,42 +64,41 @@ p {
 </head>
 <body>
   <div class="container">
-The thing about happiness is—it lies in little moments.
-It’s not constant, and it never will be.
-Collect the pieces while you still can.
+    <h1>Read This If You've Forgotten What Happiness Feels Like</h1>
 
-Little happy moments can look like:
-— Seeing your pup after a long week
-— Walking after a busy day
-— Listening to music after being so tired
-— A quiet cup of coffee
-— Sitting alone with a book
-— Enjoying your meal
-— Having chocolate or ice cream
+    <div class="quote-block">
+      <p>The thing about happiness is—it lies in little moments.  
+      It’s not constant, and it never will be.  
+      Collect the pieces while you still can.</p>
 
-Anything that slows down time and brings you ease—
-That is happiness.
+      <p>Little happy moments can look like:<br>
+        — Seeing your pup after a long week<br>
+        — Walking after a busy day<br>
+        — Listening to music after being so tired<br>
+        — A quiet cup of coffee<br>
+        — Sitting alone with a book<br>
+        — Enjoying your meal<br>
+        — Having chocolate or ice cream</p>
 
-Those moments bring you back to peace.
-The little moments when you forget the track of time...
-Those are the moments you’d want to feel.
+      <p>Anything that slows down time and brings you ease—That is happiness.</p>
 
-You might not notice it, but your heart is at peace
-And your mind is at rest—
-You’re fully present.
+      <p>Those moments bring you back to peace.  
+      The little moments when you forget the track of time...  
+      Those are the moments you’d want to feel.</p>
 
-Focus on those moments.
-They’re the ones you’ll remember—
-On a random fine day,
-When you’ve become who you always wanted to be.
+      <p>You might not notice it, but your heart is at peace.  
+      And your mind is at rest—You’re fully present.</p>
 
-Enjoy those little moments.
-Your life lies in them.
-Your life will be the collection of each one—
-And nothing else.
-  </br>
-<a class="back-link" href="index.html">
-  ← Back to Home</a>
+      <p>Focus on those moments.  
+      They’re the ones you’ll remember—On a random fine day,  
+      when you’ve become who you always wanted to be.</p>
+
+      <p>Enjoy those little moments.  
+      Your life lies in them.  
+      Your life will be the collection of each one—And nothing else.</p>
+    </div>
+
+    <a class="back-link" href="index.html">← Back to Home</a>
   </div>
 </body>
 </html>
