--- a/twenties.html
+++ b/twenties.html
@@ -8,27 +8,38 @@
   <style>
     body {
       margin: 0;
-      background: #fdfaf7;
+      background: #fdfcf9;
       font-family: 'Cormorant Garamond', Georgia, serif;
-      color: #333;
+      color: #222;
       padding: 3rem 1.5rem;
       text-align: center;
-      line-height: 1.9;
     }
 
     .container {
-      max-width: 800px;
+      max-width: 780px;
       margin: 0 auto;
+      padding: 2rem;
+      background-color: #fefdfb;
     }
 
     h1 {
-      font-size: 2.4em;
-      margin-bottom: 1.5rem;
+      font-size: 3em;
+      margin-bottom: 2rem;
+      font-weight: 500;
     }
 
-    p {
-      font-size: 1.15em;
+    .quote-block {
+      font-size: 1.5em;
+      line-height: 2;
       text-align: left;
+      color: #444;
+      background: #fffdf6;
+      padding: 2rem 2.2rem;
+      border-radius: 14px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.04);
+    }
+
+    .quote-block p {
       margin-bottom: 2rem;
     }
 
@@ -54,13 +65,16 @@
 <body>
   <div class="container">
     <h1>Things You Will Feel in Your 20s</h1>
-    <p>1. You will be surrounded by the people you love and the people who love you, but at times you’ll still feel lonely. There will be times when you cannot relate to anything and that will be a tough duration to go through. Be gentle with yourself, trust yourself, have faith and be a little bit patient. As long as you’re taking care of yourself and nothing else matters more than that, you will be able to get through that.</p>
 
-    <p>2. In your twenties you’ll mostly feel confused—even about the things you love and the people you love. You’ll doubt your smallest decisions to your biggest life-changing ones. There will be uncertainties and doubts crippling inside your mind. You’ll be confused about what to make for dinner to whether or not you have chosen the right career. Try to trust yourself even if things don’t work out. They’ll make a path to the things that are for you.</p>
+    <div class="quote-block">
+      <p>1. You will be surrounded by the people you love and the people who love you, but at times you’ll still feel lonely. There will be moments when you won’t relate to anything—and those will be hard. Be gentle with yourself. Trust yourself. Have faith. And most importantly, be patient. If you're taking care of yourself, that’s enough. You will make it through.</p>
 
-    <p>3. Sometimes you’ll just want to stay silent. No words. No desire to express emotions or thoughts. There will be times when you’ll want to shut the world and be in solitude for a while. And let me tell you—that’s absolutely fine. But make sure that you come back stronger than before rather than getting worse. Choosing solitude doesn’t mean shutting out people. Let them know. They care.</p>
+      <p>2. You’ll often feel confused—even about the things and people you love. You’ll question your smallest daily decisions and your biggest life-changing ones. You’ll worry about what to eat for dinner and whether you chose the right career. Let yourself trust the journey. Even the things that don’t work out will gently lead you to what’s meant for you.</p>
 
-    <p>4. One of the most important ones—you must learn to trust yourself through thick & thin, through good & bad, and everything in between. Be aware of yourself, explore yourself, trust your instincts. That’s the base of becoming the person you want to be. Because at some point, people you love and those who love you may have to leave. You must learn to be okay with it. No one stays forever. Be strong on the inside so nothing damages your confidence.</p>
+      <p>3. Sometimes, silence will feel like the only option. You won’t want to explain yourself. You’ll crave stillness, solitude. That is okay. But remember—solitude should heal you, not hollow you. Let the people around you know. Let them in, even if only a little. They care more than you think.</p>
+
+      <p>4. The most important thing you can learn: to trust yourself—deeply, unshakably. Be your biggest supporter. Your safest place. One day, the people you love, and those who love you, may need to go. Life changes. Learn to be okay with that. You’ll never be alone if you learn how to stand by yourself.</p>
+    </div>
 
     <a class="back-link" href="index.html">← Back to Home</a>
   </div>
