--- a/research.html
+++ b/research.html
@@ -3,53 +3,84 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Research Articles</title>
+  <title>Research | Kinjal Patel</title>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&display=swap" rel="stylesheet">
   <style>
+    @font-face {
+      font-family: 'Centaur';
+      src: url('fonts/centaur.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+    }
+
     body {
       margin: 0;
+      font-family: 'Centaur', 'Cormorant Garamond', Georgia, serif;
       background: #fdfcf9;
-      font-family: 'Cormorant Garamond', Georgia, serif;
       color: #222;
       padding: 3rem 1.5rem;
       text-align: center;
     }
 
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-    }
-
-    h1 {
-      font-size: 3em;
+    nav {
       margin-bottom: 2rem;
     }
 
-    .article {
-      margin-bottom: 3rem;
-      padding-bottom: 1rem;
-      border-bottom: 1px solid #ddd;
+    nav a {
+      margin: 0 1rem;
+      text-decoration: none;
+      color: #333;
+      font-size: 1.1em;
+      border-bottom: 2px solid transparent;
+      padding-bottom: 4px;
+      transition: border-color 0.3s;
     }
 
-    .article strong {
-      font-size: 1.3em;
+    nav a:hover {
+      border-color: #1f1f1f;
     }
 
-    .article em {
-      display: block;
-      margin: 0.6rem 0;
+    h1 {
+      font-size: 2.6em;
+      margin-bottom: 0.5em;
+    }
+
+    .research-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+      max-width: 900px;
+      margin: 0 auto;
+      text-align: left;
+    }
+
+    .paper-card {
+      background: #f7f3ef;
+      padding: 1.5rem;
+      border-radius: 12px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.05);
+    }
+
+    .paper-card h3 {
+      margin-top: 0;
+      font-size: 1.4em;
+    }
+
+    .paper-card p {
       font-style: italic;
+      margin: 0.5rem 0 1rem;
       color: #666;
     }
 
     .read-button {
       background-color: #1f1f1f;
       color: white;
-      padding: 12px 26px;
+      padding: 10px 20px;
       border-radius: 30px;
       font-size: 1em;
       font-family: 'Cormorant Garamond', Georgia, serif;
       text-decoration: none;
+      display: inline-block;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       transition: background-color 0.3s ease;
     }
@@ -61,8 +92,8 @@
     .back-link {
       display: inline-block;
       margin-top: 3rem;
-      font-size: 1em;
       text-decoration: none;
+      font-size: 1em;
       color: #333;
       border: 1px solid #aaa;
       padding: 10px 20px;
@@ -73,26 +104,45 @@
     .back-link:hover {
       background-color: #222;
       color: white;
+      border-color: #222;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>My Research Articles</h1>
 
-    <div class="article">
-      <strong>Transition Properties of Doubly Heavy Baryons</strong>
-      <em>Published in International Journal of Theoretical Physics (IJTP, 2025)</em>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="research.html">Research</a>
+    <a href="twenties.html">For 20s</a>
+    <a href="happiness.html">Happiness</a>
+    <a href="booklist.html">Reading List</a>
+    <a href="mailto:your@email.com">Contact</a>
+  </nav>
+
+  <h1>🧠 My Research Work</h1>
+  <p style="max-width: 680px; margin: 0 auto 3rem; font-size: 1.15em;">
+    I explore the quantum world of heavy baryons and their decay properties — a glimpse into how matter behaves at its most fundamental level.
+  </p>
+
+  <div class="research-grid">
+
+    <div class="paper-card">
+      <h3>Transition Properties of Doubly Heavy Baryons</h3>
+      <p>Published in International Journal of Theoretical Physics (IJTP, 2025)</p>
       <a class="read-button" href="https://doi.org/10.1007/s10773-025-05997-5" target="_blank">Read Full Article</a>
     </div>
 
-    <div class="article">
-      <strong>Electromagnetic and Weak Decay Properties of Singly Heavy Baryons</strong>
-      <em>Published in European Physical Journal Plus (EPJP, 2025)</em>
+    <div class="paper-card">
+      <h3>Electromagnetic and Weak Decay Properties of Singly Heavy Baryons</h3>
+      <p>Published in European Physical Journal Plus (EPJP, 2025)</p>
       <a class="read-button" href="https://doi.org/10.1140/epjp/s13360-025-06398-7" target="_blank">Read Full Article</a>
     </div>
 
-    <a class="back-link" href="index.html">← Back to Home</a>
+    <!-- Add more papers here in similar format -->
+
   </div>
+
+  <a class="back-link" href="index.html">← Back to Home</a>
+
 </body>
 </html>
