--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@
       border-radius: 30px;
       font-size: 1.1em;
       font-family: 'Cormorant Garamond', Georgia, serif;
-      margin: 1rem 0.5rem;
+      margin: 0.8rem 0.5rem;
       text-decoration: none;
       display: inline-block;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       transition: all 0.3s ease;
+      max-width: 90%;
     }
 
     .read-button:hover,
@@ -114,6 +115,12 @@
 
       .profile-header h1 {
         font-size: 2em;
+      }
+
+      .read-button,
+      .shop-button {
+        font-size: 1em;
+        padding: 12px 20px;
       }
     }
   </style>
@@ -139,12 +146,11 @@
     </div>
   </div>
 
-  <!-- Your existing sections and buttons go below -->
-  <!-- Example buttons -->
+  <!-- Main Buttons -->
   <a class="read-button" href="twenties.html">📖 Read This If You Are in Your 20s</a>
   <a class="read-button" href="happiness.html">🌻 Read This If You’ve Forgotten What Happiness Looks Like</a>
   <a class="shop-button" href="booklist.html">📚 Reading List</a>
-  <a class="shop-button" href="https://amzn.in/d/38fGir8" target="_blank">🛍️ Buy My Book on Amazon</a>
+  <a class="shop-button" href="shop.html">🛍️ Buy My Book on Amazon</a>
 
 </body>
 </html>
